  passed the compiler directly to the get method with autoEscape enabled,
  the autoEscape was disabled in included templates - Thanks to Fabien 
  Potencier for notifying me.
* Fixed a bug when accessing array indices that contain a minus sign, it 
  is now possible to access those using {$var[index-foo]}, 
  {$var['index-foo']} or {$index="index-foo"} {$var[$index]}

[2009-07-18] 1.1.0
! BC Break: Dwoo::initGlobals() is only called once during the Dwoo object
  construction. If you had overriden it and need to update global data
  before each template is executed you should instead override
  Dwoo::initRuntimeVars() and push stuff in the globals array there. Also
  be aware that this means captured data, foreach values and so-on will
  persist from a parent template to an included one (but the include's
  changes will not be reflected on the parent), and from a template
  to the next if you render several in series.
+ Added {template} plugin that allows you to define sub-templates and then
  call them (works recursively too, good for menus and lists)
+ Added {load_templates} to load external sub-templates into your file
+ Allowed string concatenation assignments with {$foo.="bar"}
+ Allowed access of static properties as {Foo::$bar}
+ Plugins/Helpers that use a dynamic number of arguments through
  func_get_args are now working since the compiler lets any arguments in
  excess pass through
+ Adapters: CodeIgniter: the adapter by Stefan Verstege has been added to
  core and he will be its maintainer from now on
+ Adapters: CakePHP: this adapter is now added to core and is designed to
  work with CakePHP 1.2
* Adapters: Zend: Denis Arh is now appointed maintainer of that part and
  fixed a few things since 1.0.1
* The include_path isn't altered anymore, hopefully saving some stat calls
* User classes extending Dwoo_Template_File are now supported better with
  regard to includes - Thanks to the Kayako.com team for the patch