@@ -7,6 +7,9 @@
 * Fixed a bug when accessing array indices that contain a minus sign, it 
   is now possible to access those using {$var[index-foo]}, 
   {$var['index-foo']} or {$index="index-foo"} {$var[$index]}
+* Fixed a bug when using the autoEscape feature with sub-templates (the 
+  compiled sub-template couldn't access the dwoo charset property, 
+  resulting in a fatal error)
 
 [2009-07-18] 1.1.0
 ! BC Break: Dwoo::initGlobals() is only called once during the Dwoo object
